[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-security"
version = "0.1.0"
description = "AI-powered behavioral detection and attack path engine (TrustGeeks Security)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TrustGeeks Security Inc." }]
keywords = ["security", "soc", "attack-graph", "threat-detection", "blue-team"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "networkx>=3.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-dateutil>=2.9.0",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "httpx>=0.27.0", "fakeredis>=2.23.0", "anthropic>=0.34.0", "redis>=5.0.0"]
llm = ["anthropic>=0.34.0"]
streaming = ["redis>=5.0.0"]

[project.scripts]
nexus = "nexus.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
